passes fileTests, working on directoryTests